fix(backend): 事件推送不再可能为空值抛异常；测试补齐新依赖的 mock
- SmsService 里两处 broadcast 的载荷改用 Collections.singletonMap：**Map.of 遇到 null 值
  直接抛 NPE**，而这里的 id 来自「save 之后由 JPA 回填」这一副作用，推送又只是旁路信号 ——
  不能让它有机会把短信上报整条打断（设备端会把它当可重试，无限重试）。
- SmsServiceTest / DeviceServiceTest 补上 AdminEventBroadcaster 的 mock：@InjectMocks
  只注入声明过的 mock，少一个就被注入成 null，而报错点落在 setUp 的事务桩里，
  完全看不出跟它有关。
- duplicateDoesNotInsertConflictingRow 改名 duplicateIsCountedOnTheOriginalRow：
  行为已改为「在原行上计数」，断言跟着改。
- 新增 sameContentFromAnotherDeviceIsNotDuplicate：守住「按设备去重」——
  两台手机收到同一段内容各记一行，不是彼此的重复。

（此前用 mvn compile 验证后端，而它不编译测试，所以这几处一直没被发现。）